fix line break in coins table

--- a/client/src/app/coins/_desktop.scss
+++ b/client/src/app/coins/_desktop.scss
@@ -13,7 +13,7 @@
                 padding: 10px;
                 .coin_details{
                     .name{
-                        width: 60%;
+                        width: 55%;
                         padding: 5px;
                     }
                     .logo{
